k8s/namespaces/development/coder/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-https
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: coder
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-http
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`coder.oglesby.io`)
      kind: Rule
      services:
        - name: coder
          port: 80
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
